# python-project-386

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py  schemas.py
backend/app/routers/: bookings.py  event_types.py  owner.py  slots.py
contracts/: booking-api.tsp  openapi.yaml
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BookingForm.tsx  EventTypeCard.tsx  Layout.tsx  SlotPicker.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/pages/: AdminPage.tsx  HomePage.tsx
frontend/src/types/: api.ts
